<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.android.animal.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <EditText
            android:id="@+id/name_text_input"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/hint"
            android:inputType="textCapWords"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="24dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/swim_question"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/swim_rg"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/swim_yes_rb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:text="@string/yes"
                    android:paddingStart="8dp"/>
                <RadioButton
                    android:id="@+id/swim_no_rb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/no"
                    android:paddingStart="8dp"/>

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="24dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_question"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/food_rg"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/food_yes_rb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:text="@string/yes"
                    android:paddingStart="8dp"/>
                <RadioButton
                    android:id="@+id/food_no_rb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/no"
                    android:paddingStart="8dp"/>


            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="24dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/climbing_question"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/climbing_rg"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/climbing_yes_rb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:text="@string/yes"
                    android:paddingStart="8dp"/>
                <RadioButton
                    android:id="@+id/climbing_no_rb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/no"
                    android:paddingStart="8dp"/>


            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="24dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instructions_question"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/instructions_rg"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/instructions_yes_rb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:text="@string/yes"
                    android:paddingStart="8dp"/>
                <RadioButton
                    android:id="@+id/instructions_no_rb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/no"
                    android:paddingStart="8dp"/>


            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="24dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drink_question"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <CheckBox
                android:id="@+id/milk_cb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:text="@string/drink_milk"/>
            <CheckBox
                android:id="@+id/whisky_cb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/drink_whisky"/>
            <CheckBox
                android:id="@+id/water_cb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/drink_water"/>

        </LinearLayout>

        <TextView
            android:id="@+id/summary_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:text="@string/summary"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="@string/check"
            android:onClick="check"
            android:textAllCaps="true"
            android:layout_marginBottom="16dp"/>
    </LinearLayout>

</ScrollView>
